# BK_SMS

./: .coverage  DEPLOYMENT.md  IMMEDIATE_ACTION_REQUIRED.md  Procfile  README.md  app.py  backup_data.py  build-fallback.sh  build.sh  fix_render_database.py  gunicorn_config.py  pyproject.toml  pytest.ini  render-build.sh  render.yaml  requirements-no-pillow.txt  requirements-simple.txt  requirements.txt  setup.py  start.sh  test_production.py
core/: forms.py  middleware.py  models.py  urls.py  views.py
core/management/commands/: backup_data.py  create_default_admin.py  create_default_categories.py  ensure_data_persistence.py  import_sales.py  monitor_database.py  setup_database.py  setup_render_database.py  test_performance.py
core/migrations/: 0020_product_unit.py  0021_alter_orderitem_order.py  0022_order_payment_type.py  0023_add_performance_indexes.py  0024_auto_20250618_0629.py  0025_product_is_in_inventory.py
core/tests/: test_views.py
templates/: add_category.html  add_product.html  add_sale.html  base.html  dashboard.html  edit_order.html  edit_product.html  employees.html  inventory.html  orders.html  pos.html  products.html  reports.html  sales.html  settings.html  view_order.html
upendo_bakery/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
