[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upendo-bakery"
version = "1.0.0"
description = "Upendo Bakery Management System"
requires-python = ">=3.11"
dependencies = [
    "Django==5.2.1",
    "django-phonenumber-field==7.3.0",
    "phonenumbers==8.13.30",
    "Pillow==10.0.1",
    "python-decouple==3.8",
    "requests==2.31.0",
    "django-crispy-forms==2.1",
    "crispy-bootstrap5==2023.10",
    "django-environ==0.11.2",
    "psycopg2-binary==2.9.9",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "django-storages==1.14.2",
    "python-dotenv==1.0.0",
    "django-cors-headers==4.3.1",
    "django-redis==5.4.0",
    "sentry-sdk[django]==1.39.1",
    "pytest==8.0.0",
    "pytest-django==4.8.0",
    "coverage==7.4.1",
    "dj-database-url==2.1.0",
]

[tool.setuptools]
packages = ["upendo_bakery", "core"]

# Disable Poetry
[tool.poetry]
disable = true 