[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upendo-bakery"
version = "1.0.0"
description = "Upendo Bakery Management System"
requires-python = ">=3.8"
dependencies = []

[tool.poetry]
disable = true

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.setuptools]
packages = ["upendo_bakery", "core"] 