[tool.poetry]
name = "upendo-bakery"
version = "1.0.0"
description = "Upendo Bakery Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.18"
Django = "^5.2.1"
django-phonenumber-field = "^7.3.0"
phonenumbers = "^8.13.30"
Pillow = "^10.2.0"
python-decouple = "^3.8"
whitenoise = "^6.6.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^0.7"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.69"
sentry-sdk = "^2.6.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
django-storages = "^1.14.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "upendo_bakery.manage:main"
